# GR00T-WholeBodyControl

brainco/: Makefile  hand_server  hand_server.c  pyproject.toml  test_hands.py
decoupled_wbc/control/teleop/streamers/: pico_streamer.py
gear_sonic/scripts/: pico_manager_thread_server.py
gear_sonic_deploy/scripts/: setup_env.sh
gear_sonic_deploy/src/g1/g1_deploy_onnx_ref/include/input_interface/: streamed_motion_merger.hpp  zmq_endpoint_interface.hpp
oakd/: Makefile  build_depthai.sh  main.cpp  network_helper.hpp  streaming_only  streaming_only.cpp
recorder/: CLAUDE.md  brainco_hand.py  extras.py  livox_lidar.py  orin_camera.py  pico_xrt.py  pyproject.toml  stream.py  stream2.py  stream_brainco.py  stream_camera.py  stream_lidar.py  stream_monitor.py  stream_pico.py  stream_robot.py  temps.py  unitree_robot.py  visualize.py  visualize2.py  visualize_episodes.py
recorder/debug_dataset/: bar.bag  bar.idx  foo.bag  foo.idx  spec.json
scripts/: test_brainco_left_hand.py
